--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.15.1",
+    "date-fns": "^2.25.0",
     "nuxt": "^2.15.7",
     "vue-markdown": "^2.2.4"
   },
