--- a/package.json
+++ b/package.json
@@ -16,7 +16,8 @@
     "core-js": "^3.15.1",
     "date-fns": "^2.25.0",
     "nuxt": "^2.15.7",
-    "vue-markdown": "^2.2.4"
+    "vue-markdown": "^2.2.4",
+    "vue-plausible": "^1.3.1"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
