--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
     "core-js": "^3.15.1",
     "date-fns": "^2.25.0",
     "nuxt": "^2.15.7",
-    "vue-markdown": "^2.2.4",
-    "vue-plausible": "^1.3.1"
+    "vue-markdown": "^2.2.4"
   },
   "devDependencies": {
     "@babel/eslint-parser": "^7.14.7",
@@ -34,6 +33,7 @@
     "eslint-plugin-nuxt": "^2.0.0",
     "eslint-plugin-vue": "^7.12.1",
     "jest": "^27.0.5",
+    "nuxt-umami": "^1.1.1",
     "postcss": "^8.3.5",
     "prettier": "^2.3.2",
     "ts-jest": "^27.0.3",
