--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@nuxtjs/sitemap": "^2.4.0",
     "core-js": "^3.15.1",
     "date-fns": "^2.25.0",
+    "dotenv": "^16.0.3",
     "nuxt": "^2.15.7",
     "vue-markdown": "^2.2.4"
   },
