--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   },
   "dependencies": {
     "@nuxtjs/sitemap": "^2.4.0",
+    "axios": "^1.2.3",
     "core-js": "^3.15.1",
     "date-fns": "^2.25.0",
     "dotenv": "^16.0.3",
